add header and body style to page

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ body {
     padding: 5px;
     height: 250px;
     background: rgb(183, 233, 102);
-    background-image: url("https://fossbytes.com/wp-content/uploads/2019/04/Microsoft-bosque-programming-language.jpg");
+    background-image: url("https://images.app.goo.gl/po4vW51ZZ9AfSiXn8");
     color: white;
     font-size: larger;
 }
